--- a/index.html
+++ b/index.html
@@ -6,58 +6,51 @@
   <title>Jack Simm – Product Designer</title>
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
-    :root {
-      --bg: #1c1c1c;
-      --text: #ffffff;
-      --accent: #2a2a2a;
-    }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
+      background: #1c1c1c;
+      color: #eee;
     }
 
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 16px 24px;
-      background-color: var(--accent);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      padding: 20px 40px;
+      font-weight: 600;
+      font-size: 1.1rem;
     }
 
     .left {
-      font-size: 1.2rem;
-      font-weight: bold;
       cursor: pointer;
+      font-size: 1.2rem;
+      padding: 10px;
+      color: #eee;
     }
 
     .dropdown {
       position: absolute;
       top: 60px;
-      left: 24px;
-      background-color: var(--accent);
+      left: 40px;
+      background: #2a2a2a;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 6px;
       display: none;
       flex-direction: column;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      z-index: 10;
     }
 
     .dropdown a {
       padding: 12px 20px;
       text-decoration: none;
-      color: var(--text);
+      color: #eee;
       font-weight: 500;
-      font-size: 1rem;
     }
 
     .banner-section {
       width: 100%;
-      height: 80vh;
+      height: 120vh;
       overflow: hidden;
       position: relative;
     }
@@ -71,89 +64,95 @@
 
     .profile-overlay {
       position: absolute;
-      bottom: 40px;
-      left: 24px;
+      bottom: 60px;
+      left: 50px;
       background: rgba(0, 0, 0, 0.75);
-      padding: 20px 30px;
-      border-radius: 16px;
+      padding: 25px 40px;
+      border-radius: 20px;
       display: flex;
-      gap: 16px;
+      flex-direction: row;
       align-items: center;
+      width: 550px;
       max-width: 90%;
+      gap: 20px;
     }
 
     .profile-pic {
-      width: 100px;
-      height: 100px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid white;
       filter: grayscale(100%);
+      border: 3px solid white;
     }
 
     .titles {
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
     }
 
     .titles h2 {
+      color: white;
       margin: 4px 0;
-      font-size: 1.2rem;
-    }
-
-    .titles h1 {
       font-size: 1.4rem;
-      margin: 0;
+      text-align: left;
     }
 
     .mobile-profile {
       display: none;
-      text-align: center;
       background: rgba(0, 0, 0, 0.75);
-      padding: 20px;
-      margin: 20px;
+      text-align: center;
+      padding: 15px;
+      margin: 20px 16px;
       border-radius: 16px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .mobile-profile img {
-      width: 90px;
-      height: 90px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
       object-fit: cover;
-      border: 2px solid white;
-      margin-bottom: 10px;
-    }
-
-    .mobile-profile h1 {
-      font-size: 1.3rem;
-      margin-bottom: 4px;
+      filter: grayscale(100%);
+      border: 3px solid white;
+      margin-bottom: 12px;
     }
 
     .mobile-profile h2 {
-      font-size: 1rem;
-      margin: 4px 0;
+      color: white;
+      margin: 5px 0;
+      font-size: 1.2rem;
     }
 
     .container {
       max-width: 1100px;
-      margin: 40px auto;
-      padding: 20px;
+      background: #2a2a2a;
+      border-radius: 16px;
+      padding: 60px;
+      margin: 60px auto;
+      color: #f5f5f5;
+    }
+
+    h3 {
+      font-size: 1.6rem;
+      margin-bottom: 12px;
+      font-weight: 600;
+      color: #f5f5f5;
     }
 
     .row {
       display: flex;
       flex-wrap: wrap;
-      gap: 30px;
+      gap: 60px;
     }
 
     .column {
       flex: 1;
-      min-width: 280px;
-    }
-
-    h3 {
-      font-size: 1.4rem;
-      margin-bottom: 10px;
+      min-width: 300px;
     }
 
     ul {
@@ -161,36 +160,42 @@
     }
 
     ul li {
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
 
     .contact-section {
       text-align: center;
-      margin-top: 40px;
+      margin-bottom: 40px;
     }
 
     .contact-links {
       display: flex;
       justify-content: center;
-      gap: 30px;
+      gap: 40px;
       margin-top: 20px;
     }
 
     .contact-links a {
-      color: var(--text);
+      color: #f5f5f5;
       text-decoration: none;
     }
 
+    .contact-links i,
     .contact-links svg {
       width: 28px;
       height: 28px;
-      stroke: var(--text);
+      stroke: #f5f5f5;
+      transition: stroke 0.3s ease;
+    }
+
+    .contact-links a:hover svg {
+      stroke: #ffffff;
     }
 
     footer {
       text-align: center;
       padding: 20px;
-      font-size: 0.85rem;
+      font-size: 0.9rem;
       color: #aaa;
     }
 
@@ -203,31 +208,30 @@
         display: block;
       }
 
-      .banner-section {
-        height: 60vh;
-      }
-
-      .titles h2 {
-        font-size: 1rem;
-      }
-
       .container {
-        padding: 16px;
+        padding: 20px;
+        margin: 30px auto;
       }
 
       .contact-links {
         flex-direction: row;
-        gap: 20px;
+        gap: 30px;
+      }
+
+      .banner-section {
+        height: 70vh;
+      }
+
+      .titles h2 {
+        font-size: 1.1rem;
       }
     }
   </style>
 </head>
 <body>
-
   <header>
     <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
     <div class="dropdown" id="dropdownMenu">
-      <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="gallery.html">Gallery</a>
       <a href="cv.html">CV</a>
@@ -235,11 +239,11 @@
   </header>
 
   <div class="banner-section">
-    <img src="banner.jpg" alt="Jack Simm banner" class="banner-img" />
+    <img src="Exploded Organiser.32.jpg" alt="Exploded organiser product render by Jack Simm" class="banner-img" loading="lazy" />
     <div class="profile-overlay">
-      <img src="profile.jpg" alt="Jack Simm portrait" class="profile-pic" />
+      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
       <div class="titles">
-        <h1>Jack Simm</h1>
+        <h2>Jack Simm</h2>
         <h2>Product Designer</h2>
         <h2>Product Development Manager</h2>
       </div>
@@ -247,8 +251,8 @@
   </div>
 
   <div class="mobile-profile">
-    <img src="profile.jpg" alt="Jack Simm" />
-    <h1>Jack Simm</h1>
+    <img src="profile.jpg" alt="Jack Simm" loading="lazy" />
+    <h2>Jack Simm</h2>
     <h2>Product Designer</h2>
     <h2>Product Development Manager</h2>
   </div>
@@ -258,7 +262,7 @@
       <div class="column">
         <h3>About Me</h3>
         <p>
-          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.
+          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
         </p>
       </div>
       <div class="column">
@@ -267,15 +271,16 @@
           <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
           <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
           <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-          <li><strong>Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
         </ul>
 
-        <h3>Skills</h3>
+        <h3 style="margin-top: 30px;">Skills</h3>
         <ul>
-          <li><strong>CAD</strong> (SolidWorks, Shapr3D)</li>
-          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator)</li>
+          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
+          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
           <li><strong>Rapid Prototyping</strong></li>
           <li><strong>User-Centred Design</strong></li>
+          <li><strong>Production Coordination</strong></li>
         </ul>
       </div>
     </div>
@@ -284,14 +289,16 @@
   <div class="contact-section">
     <h3>Contact Me</h3>
     <div class="contact-links">
-      <a href="mailto:jack.simm.design@gmail.com"><i data-feather="mail"></i></a>
-      <a href="https://www.instagram.com/jack_simm_design" target="_blank"><i data-feather="instagram"></i></a>
+      <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
+        <i data-feather="mail"></i>
+      </a>
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Jack Simm on Instagram">
+        <i data-feather="instagram"></i>
+      </a>
     </div>
   </div>
 
-  <footer>
-    &copy; 2025 Jack Simm – Portfolio
-  </footer>
+  <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
   <script>
     const toggle = document.querySelector(".left");
