--- a/gallery.html
+++ b/gallery.html
@@ -123,6 +123,7 @@
   <div class="gallery-container">
     <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser Render" loading="lazy" />
     <img src="untitled.31.jpg" alt="Untitled Design Render" loading="lazy" />
+    <img src="centered_untitled.34.jpg" alt="Yellow 3D Object" loading="lazy" />
   </div>
 
   <!-- Lightbox -->
@@ -167,7 +168,6 @@
       }
     });
 
-    // Replace feather icons
     feather.replace();
   </script>
 
