--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,6 @@
       color: #eee;
     }
 
-    /* Header Navigation */
     header {
       display: flex;
       justify-content: space-between;
@@ -53,7 +52,6 @@
       background-color: #383838;
     }
 
-    /* Gallery Layout */
     .gallery-container {
       display: flex;
       flex-direction: column;
@@ -77,7 +75,6 @@
       transform: scale(1.03);
     }
 
-    /* Lightbox Styles */
     .lightbox {
       position: fixed;
       top: 0;
@@ -123,7 +120,7 @@
   <div class="gallery-container">
     <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser Render" loading="lazy" />
     <img src="untitled.31.jpg" alt="Untitled Design Render" loading="lazy" />
-    <img src="centered_untitled.34.jpg" alt="Yellow 3D Object" loading="lazy" />
+    <img src="untitled.34_original.jpg" alt="Yellow 3D Object (Original)" loading="lazy" />
   </div>
 
   <!-- Lightbox -->
@@ -132,7 +129,6 @@
   </div>
 
   <script>
-    // Dropdown toggle
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
@@ -141,7 +137,6 @@
       menu.style.display = isVisible ? "none" : "flex";
     });
 
-    // Lightbox functionality
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
     const images = document.querySelectorAll('.gallery-container img');
