--- a/gallery.html
+++ b/gallery.html
@@ -120,7 +120,7 @@
   <div class="gallery-container">
     <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser Render" loading="lazy" />
     <img src="untitled.31.jpg" alt="Untitled Design Render" loading="lazy" />
-    <img src="untitled.34_original.jpg" alt="Yellow 3D Object (Original)" loading="lazy" />
+    <img src="untitled.34.jpg" alt="Yellow 3D Object" loading="lazy" />
   </div>
 
   <!-- Lightbox -->
@@ -129,6 +129,7 @@
   </div>
 
   <script>
+    // Dropdown toggle
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
@@ -137,6 +138,7 @@
       menu.style.display = isVisible ? "none" : "flex";
     });
 
+    // Lightbox functionality
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
     const images = document.querySelectorAll('.gallery-container img');
