--- a/gallery.html
+++ b/gallery.html
@@ -121,6 +121,7 @@
     <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser Render" loading="lazy" />
     <img src="untitled.31.jpg" alt="Untitled Design Render" loading="lazy" />
     <img src="untitled.34.jpg" alt="Yellow 3D Object" loading="lazy" />
+    <img src="untitled.36.jpg" alt="Red Exploded Product Design" loading="lazy" />
   </div>
 
   <!-- Lightbox -->
