--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
       color: #eee;
     }
 
+    /* Header */
     header {
       display: flex;
       justify-content: space-between;
@@ -52,29 +53,30 @@
       background-color: #383838;
     }
 
+    /* Gallery Grid */
     .gallery-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 40px;
-      padding: 60px 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 24px;
+      padding: 40px 20px;
       max-width: 1200px;
       margin: 0 auto;
     }
 
     .gallery-container img {
-      max-width: 100%;
+      width: 100%;
       height: auto;
       border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
       transition: transform 0.3s ease;
       cursor: zoom-in;
     }
 
     .gallery-container img:hover {
-      transform: scale(1.03);
+      transform: scale(1.02);
     }
 
+    /* Lightbox */
     .lightbox {
       position: fixed;
       top: 0;
@@ -95,10 +97,11 @@
       cursor: zoom-out;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
       .gallery-container {
-        padding: 40px 16px;
-        gap: 20px;
+        grid-template-columns: 1fr;
+        gap: 16px;
+        padding: 20px 16px;
       }
     }
   </style>
@@ -130,13 +133,12 @@
   </div>
 
   <script>
-    // Dropdown toggle
+    // Toggle dropdown
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
     toggle.addEventListener("click", () => {
-      const isVisible = menu.style.display === "flex";
-      menu.style.display = isVisible ? "none" : "flex";
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
     });
 
     // Lightbox functionality
