--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jack Simm – Product Designer</title>
   <script src="https://unpkg.com/feather-icons"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -49,18 +48,31 @@
       font-weight: 500;
     }
 
+    /* Banner Slideshow */
     .banner-section {
-      width: 100%;
-      height: 120vh;
-      overflow: hidden;
       position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    .banner-img {
+    .banner-slideshow {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      object-position: center;
+      background-size: cover;
+      background-position: center;
+      animation: slideshow 20s infinite;
+    }
+
+    @keyframes slideshow {
+      0%    { background-image: url("Exploded Organiser.32.jpg"); }
+      25%   { background-image: url("untitled.31.jpg"); }
+      50%   { background-image: url("untitled.34.jpg"); }
+      75%   { background-image: url("untitled.36.jpg"); }
+      100%  { background-image: url("Exploded Organiser.32.jpg"); }
     }
 
     .profile-overlay {
@@ -239,9 +251,9 @@
     </div>
   </header>
 
-  <div class="banner-section" data-aos="fade-up">
-    <img src="Exploded Organiser.32.jpg" alt="Exploded organiser product render by Jack Simm" class="banner-img" loading="lazy" />
-    <div class="profile-overlay" data-aos="zoom-in" data-aos-delay="200">
+  <div class="banner-section">
+    <div class="banner-slideshow"></div>
+    <div class="profile-overlay">
       <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
       <div class="titles">
         <h2>Jack Simm</h2>
@@ -251,14 +263,14 @@
     </div>
   </div>
 
-  <div class="mobile-profile" data-aos="fade-up" data-aos-delay="300">
+  <div class="mobile-profile">
     <img src="profile.jpg" alt="Jack Simm" loading="lazy" />
     <h2>Jack Simm</h2>
     <h2>Product Designer</h2>
     <h2>Product Development Manager</h2>
   </div>
 
-  <div class="container" data-aos="fade-up" data-aos-delay="400">
+  <div class="container">
     <div class="row">
       <div class="column">
         <h3>About Me</h3>
@@ -287,7 +299,7 @@
     </div>
   </div>
 
-  <div class="contact-section" data-aos="fade-up" data-aos-delay="500">
+  <div class="contact-section">
     <h3>Contact Me</h3>
     <div class="contact-links">
       <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
@@ -311,13 +323,6 @@
     });
 
     feather.replace();
-  </script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 1000,
-      once: true,
-    });
   </script>
 </body>
 </html>
