--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       font-weight: 500;
     }
 
-    .slideshow-container {
+    .banner-section {
       width: 100%;
-      height: 120vh;
-      overflow: hidden;
+      height: 100vh;
       position: relative;
+      overflow: hidden;
     }
 
     .slide {
@@ -62,7 +62,7 @@
       object-fit: cover;
       object-position: center;
       opacity: 0;
-      transition: opacity 1s ease-in-out;
+      transition: opacity 2s ease-in-out;
     }
 
     .slide.active {
@@ -227,7 +227,7 @@
         gap: 30px;
       }
 
-      .slideshow-container {
+      .banner-section {
         height: 70vh;
       }
 
@@ -248,12 +248,12 @@
   </header>
 
   <!-- Slideshow Banner -->
-  <div class="slideshow-container">
-    <img src="Exploded Organiser.32.jpg" class="slide active" alt="Slide 1">
-    <img src="untitled.31.jpg" class="slide" alt="Slide 2">
-    <img src="untitled.34.jpg" class="slide" alt="Slide 3">
-    <img src="untitled.36.jpg" class="slide" alt="Slide 4">
-    <img src="untitled.37.jpg" class="slide" alt="Slide 5">
+  <div class="banner-section">
+    <img src="Exploded Organiser.32.jpg" alt="Render 1" class="slide active" />
+    <img src="untitled.31.jpg" alt="Render 2" class="slide" />
+    <img src="untitled.34.jpg" alt="Render 3" class="slide" />
+    <img src="untitled.36.jpg" alt="Render 4" class="slide" />
+    <img src="untitled.37.jpg" alt="Render 5" class="slide" />
 
     <div class="profile-overlay">
       <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
@@ -277,7 +277,7 @@
       <div class="column">
         <h3>About Me</h3>
         <p>
-          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
+          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.
         </p>
       </div>
       <div class="column">
@@ -307,7 +307,7 @@
       <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
         <i data-feather="mail"></i>
       </a>
-      <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Jack Simm on Instagram">
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Instagram">
         <i data-feather="instagram"></i>
       </a>
     </div>
@@ -316,14 +316,16 @@
   <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
   <script>
+    // Toggle dropdown menu
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
     toggle.addEventListener("click", () => {
-      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+      const isVisible = menu.style.display === "flex";
+      menu.style.display = isVisible ? "none" : "flex";
     });
 
-    // Slideshow functionality
+    // Slideshow logic
     const slides = document.querySelectorAll('.slide');
     let current = 0;
 
@@ -331,7 +333,7 @@
       slides[current].classList.remove('active');
       current = (current + 1) % slides.length;
       slides[current].classList.add('active');
-    }, 5000);
+    }, 10000); // Every 10 seconds
 
     feather.replace();
   </script>
