--- a/index.html
+++ b/index.html
@@ -2,50 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jack Simm – Product Designer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #1c1c1c;
-      color: #eee;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #ffffff;
+      color: #1a1a1a;
+      font-weight: 300;
+      line-height: 1.6;
     }
 
     header {
+      position: sticky;
+      top: 0;
+      background: #ffffff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
-      font-weight: 600;
-      font-size: 1.1rem;
-    }
-
-    .left {
-      cursor: pointer;
-      font-size: 1.2rem;
-      padding: 10px;
-      color: #eee;
-    }
-
-    .dropdown {
-      position: absolute;
-      top: 60px;
-      left: 40px;
-      background: #2a2a2a;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 6px;
-      display: none;
-      flex-direction: column;
+      padding: 20px 60px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
       z-index: 10;
     }
 
+    .nav-title {
+      font-weight: 600;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
+
     .dropdown a {
-      padding: 12px 20px;
+      margin-left: 20px;
       text-decoration: none;
-      color: #eee;
-      font-weight: 500;
+      color: #1a1a1a;
+      font-weight: 400;
     }
 
     .banner-section {
@@ -70,184 +68,105 @@
       z-index: 1;
     }
 
-    .profile-overlay {
+    .hero-text {
       position: absolute;
-      bottom: 60px;
-      left: 50px;
-      background: rgba(0, 0, 0, 0.75);
-      padding: 25px 40px;
-      border-radius: 20px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      width: 550px;
-      max-width: 90%;
-      gap: 20px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #ffffff;
+      text-align: center;
       z-index: 2;
     }
 
-    .profile-pic {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      border: 3px solid white;
-    }
-
-    .titles {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-    }
-
-    .titles h2 {
-      color: white;
-      margin: 4px 0;
-      font-size: 1.4rem;
-      text-align: left;
-    }
-
-    .mobile-profile {
-      display: none;
-      background: rgba(0, 0, 0, 0.75);
-      text-align: center;
-      padding: 15px;
-      margin: 20px 16px;
-      border-radius: 16px;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .mobile-profile img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      border: 3px solid white;
-      margin-bottom: 12px;
-    }
-
-    .mobile-profile h2 {
-      color: white;
-      margin: 5px 0;
-      font-size: 1.2rem;
-    }
-
-    .container {
-      max-width: 1100px;
-      background: #2a2a2a;
-      border-radius: 16px;
-      padding: 60px;
-      margin: 60px auto;
-      color: #f5f5f5;
-    }
-
-    h3 {
-      font-size: 1.6rem;
-      margin-bottom: 12px;
+    .hero-text h1 {
+      font-size: 3rem;
       font-weight: 600;
-      color: #f5f5f5;
+      margin-bottom: 10px;
+    }
+
+    .hero-text p {
+      font-size: 1.25rem;
+      font-weight: 300;
+    }
+
+    .section {
+      max-width: 1100px;
+      margin: 120px auto;
+      padding: 0 20px;
+    }
+
+    .section h2 {
+      font-size: 2.2rem;
+      font-weight: 600;
+      text-align: center;
+      margin-bottom: 40px;
     }
 
     .row {
       display: flex;
       flex-wrap: wrap;
       gap: 60px;
+      justify-content: center;
     }
 
     .column {
       flex: 1;
       min-width: 300px;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    ul li {
-      margin-bottom: 10px;
-    }
-
-    .contact-section {
-      text-align: center;
-      margin-bottom: 40px;
+      max-width: 500px;
     }
 
     .contact-links {
       display: flex;
       justify-content: center;
-      gap: 40px;
+      gap: 30px;
       margin-top: 20px;
     }
 
     .contact-links a {
-      color: #f5f5f5;
+      color: #1a1a1a;
       text-decoration: none;
     }
 
-    .contact-links i,
     .contact-links svg {
       width: 28px;
       height: 28px;
-      stroke: #f5f5f5;
+      stroke: #1a1a1a;
       transition: stroke 0.3s ease;
     }
 
     .contact-links a:hover svg {
-      stroke: #ffffff;
+      stroke: #555;
     }
 
     footer {
       text-align: center;
-      padding: 20px;
+      padding: 40px 0;
       font-size: 0.9rem;
-      color: #aaa;
+      color: #777;
     }
 
     @media (max-width: 768px) {
-      .profile-overlay {
-        display: none;
+      .hero-text h1 {
+        font-size: 2rem;
       }
 
-      .mobile-profile {
-        display: block;
-      }
-
-      .container {
-        padding: 20px;
-        margin: 30px auto;
-      }
-
-      .contact-links {
-        flex-direction: row;
-        gap: 30px;
-      }
-
-      .banner-section {
-        height: 70vh;
-      }
-
-      .titles h2 {
-        font-size: 1.1rem;
+      .hero-text p {
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
-    <div class="dropdown" id="dropdownMenu">
+    <div class="nav-title">Jack Simm</div>
+    <nav class="dropdown">
       <a href="projects.html">Projects</a>
       <a href="gallery.html">Gallery</a>
       <a href="cv.html">CV</a>
-    </div>
+    </nav>
   </header>
 
-  <!-- Slideshow Banner -->
+  <!-- Banner Slideshow -->
   <div class="banner-section">
     <img src="Exploded Organiser.32.jpg" alt="Render 1" class="slide active" />
     <img src="untitled.31.jpg" alt="Render 2" class="slide" />
@@ -255,54 +174,43 @@
     <img src="untitled.36.jpg" alt="Render 4" class="slide" />
     <img src="untitled.37.jpg" alt="Render 5" class="slide" />
 
-    <div class="profile-overlay">
-      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
-      <div class="titles">
-        <h2>Jack Simm</h2>
-        <h2>Product Designer</h2>
-        <h2>Product Development Manager</h2>
-      </div>
+    <div class="hero-text">
+      <h1>Jack Simm</h1>
+      <p>Designing practical experiences with purpose.</p>
     </div>
   </div>
 
-  <div class="mobile-profile">
-    <img src="profile.jpg" alt="Jack Simm" loading="lazy" />
-    <h2>Jack Simm</h2>
-    <h2>Product Designer</h2>
-    <h2>Product Development Manager</h2>
-  </div>
-
-  <div class="container">
+  <div class="section">
+    <h2>About Me</h2>
     <div class="row">
       <div class="column">
-        <h3>About Me</h3>
-        <p>
-          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.
-        </p>
+        <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, problem-solving, and delivering practical solutions.</p>
       </div>
       <div class="column">
         <h3>Experience</h3>
         <ul>
-          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
-          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
-        </ul>
-
-        <h3 style="margin-top: 30px;">Skills</h3>
-        <ul>
-          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
-          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
-          <li><strong>Rapid Prototyping</strong></li>
-          <li><strong>User-Centred Design</strong></li>
-          <li><strong>Production Coordination</strong></li>
+          <li>Product Development Manager – Fabb Brothers (2024)</li>
+          <li>Kaizen Team – Unipres UK (2022–2023)</li>
+          <li>Cost Planning – Unipres UK (2021–2022)</li>
+          <li>Maintenance Technician – Unipres UK (2017–2021)</li>
         </ul>
       </div>
     </div>
   </div>
 
-  <div class="contact-section">
-    <h3>Contact Me</h3>
+  <div class="section">
+    <h2>Skills</h2>
+    <ul>
+      <li><strong>CAD Modelling</strong> – SolidWorks, Shapr3D</li>
+      <li><strong>Adobe Suite</strong> – Photoshop, Illustrator, InDesign</li>
+      <li><strong>Rapid Prototyping</strong></li>
+      <li><strong>User-Centred Design</strong></li>
+      <li><strong>Production Coordination</strong></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Contact Me</h2>
     <div class="contact-links">
       <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
         <i data-feather="mail"></i>
@@ -313,19 +221,12 @@
     </div>
   </div>
 
-  <footer>&copy; 2025 Jack Simm – Portfolio</footer>
+  <footer>
+    &copy; 2025 Jack Simm – Portfolio
+  </footer>
 
   <script>
-    // Toggle dropdown menu
-    const toggle = document.querySelector(".left");
-    const menu = document.getElementById("dropdownMenu");
-
-    toggle.addEventListener("click", () => {
-      const isVisible = menu.style.display === "flex";
-      menu.style.display = isVisible ? "none" : "flex";
-    });
-
-    // Slideshow logic
+    // Slideshow
     const slides = document.querySelectorAll('.slide');
     let current = 0;
 
@@ -333,7 +234,7 @@
       slides[current].classList.remove('active');
       current = (current + 1) % slides.length;
       slides[current].classList.add('active');
-    }, 10000); // Every 10 seconds
+    }, 10000);
 
     feather.replace();
   </script>
