--- a/index.html
+++ b/index.html
@@ -4,52 +4,60 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jack Simm – Product Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
+      margin: 0;
       font-family: 'Inter', sans-serif;
-      background: #ffffff;
-      color: #1a1a1a;
-      font-weight: 300;
-      line-height: 1.6;
+      background-color: #f5f5f7;
+      color: #1c1c1e;
     }
 
     header {
-      position: sticky;
-      top: 0;
-      background: #ffffff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 60px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      z-index: 10;
+      padding: 24px 64px;
+      background-color: white;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
     }
 
-    .nav-title {
+    .left {
+      font-size: 1.3rem;
       font-weight: 600;
-      font-size: 1.2rem;
+      color: #000;
       cursor: pointer;
     }
 
+    .dropdown {
+      position: absolute;
+      top: 80px;
+      left: 64px;
+      background: white;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-radius: 8px;
+      display: none;
+      flex-direction: column;
+    }
+
     .dropdown a {
-      margin-left: 20px;
+      padding: 14px 20px;
       text-decoration: none;
-      color: #1a1a1a;
-      font-weight: 400;
+      color: #1c1c1e;
+      font-weight: 500;
+    }
+
+    .dropdown a:hover {
+      background-color: #f0f0f0;
     }
 
     .banner-section {
-      width: 100%;
-      height: 100vh;
       position: relative;
+      height: 100vh;
       overflow: hidden;
     }
 
@@ -58,9 +66,8 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: center;
       opacity: 0;
-      transition: opacity 2s ease-in-out;
+      transition: opacity 4s ease-in-out;
     }
 
     .slide.active {
@@ -68,51 +75,69 @@
       z-index: 1;
     }
 
-    .hero-text {
+    .profile-overlay {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #ffffff;
-      text-align: center;
+      bottom: 80px;
+      left: 80px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 30px 50px;
+      border-radius: 16px;
+      display: flex;
+      align-items: center;
+      gap: 24px;
+      max-width: 600px;
       z-index: 2;
     }
 
-    .hero-text h1 {
-      font-size: 3rem;
-      font-weight: 600;
-      margin-bottom: 10px;
+    .profile-pic {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 2px solid #000;
     }
 
-    .hero-text p {
+    .titles h2 {
+      margin: 4px 0;
+      font-weight: 600;
       font-size: 1.25rem;
-      font-weight: 300;
     }
 
-    .section {
+    .container {
       max-width: 1100px;
-      margin: 120px auto;
-      padding: 0 20px;
-    }
-
-    .section h2 {
-      font-size: 2.2rem;
-      font-weight: 600;
-      text-align: center;
-      margin-bottom: 40px;
+      margin: 80px auto;
+      padding: 0 40px;
     }
 
     .row {
       display: flex;
       flex-wrap: wrap;
       gap: 60px;
-      justify-content: center;
     }
 
     .column {
       flex: 1;
       min-width: 300px;
-      max-width: 500px;
+    }
+
+    h3 {
+      font-size: 1.6rem;
+      margin-bottom: 12px;
+      font-weight: 600;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin-bottom: 10px;
+    }
+
+    .contact-section {
+      text-align: center;
+      margin-top: 100px;
     }
 
     .contact-links {
@@ -123,34 +148,36 @@
     }
 
     .contact-links a {
-      color: #1a1a1a;
+      color: #1c1c1e;
       text-decoration: none;
     }
 
+    .contact-links i,
     .contact-links svg {
       width: 28px;
       height: 28px;
-      stroke: #1a1a1a;
-      transition: stroke 0.3s ease;
-    }
-
-    .contact-links a:hover svg {
-      stroke: #555;
+      stroke: #1c1c1e;
     }
 
     footer {
       text-align: center;
-      padding: 40px 0;
+      padding: 40px;
       font-size: 0.9rem;
-      color: #777;
+      color: #888;
     }
 
     @media (max-width: 768px) {
-      .hero-text h1 {
-        font-size: 2rem;
+      header {
+        padding: 20px;
       }
-
-      .hero-text p {
+      .profile-overlay {
+        left: 20px;
+        right: 20px;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+      }
+      .titles h2 {
         font-size: 1rem;
       }
     }
@@ -158,15 +185,14 @@
 </head>
 <body>
   <header>
-    <div class="nav-title">Jack Simm</div>
-    <nav class="dropdown">
+    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="dropdown" id="dropdownMenu">
       <a href="projects.html">Projects</a>
       <a href="gallery.html">Gallery</a>
       <a href="cv.html">CV</a>
-    </nav>
+    </div>
   </header>
 
-  <!-- Banner Slideshow -->
   <div class="banner-section">
     <img src="Exploded Organiser.32.jpg" alt="Render 1" class="slide active" />
     <img src="untitled.31.jpg" alt="Render 2" class="slide" />
@@ -174,43 +200,44 @@
     <img src="untitled.36.jpg" alt="Render 4" class="slide" />
     <img src="untitled.37.jpg" alt="Render 5" class="slide" />
 
-    <div class="hero-text">
-      <h1>Jack Simm</h1>
-      <p>Designing practical experiences with purpose.</p>
+    <div class="profile-overlay">
+      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
+      <div class="titles">
+        <h2>Jack Simm</h2>
+        <h2>Product Designer</h2>
+        <h2>Product Development Manager</h2>
+      </div>
     </div>
   </div>
 
-  <div class="section">
-    <h2>About Me</h2>
+  <div class="container">
     <div class="row">
       <div class="column">
-        <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, problem-solving, and delivering practical solutions.</p>
+        <h3>About Me</h3>
+        <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.</p>
       </div>
       <div class="column">
         <h3>Experience</h3>
         <ul>
-          <li>Product Development Manager – Fabb Brothers (2024)</li>
-          <li>Kaizen Team – Unipres UK (2022–2023)</li>
-          <li>Cost Planning – Unipres UK (2021–2022)</li>
-          <li>Maintenance Technician – Unipres UK (2017–2021)</li>
+          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
+          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
+          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+        </ul>
+        <h3>Skills</h3>
+        <ul>
+          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
+          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
+          <li><strong>Rapid Prototyping</strong></li>
+          <li><strong>User-Centred Design</strong></li>
+          <li><strong>Production Coordination</strong></li>
         </ul>
       </div>
     </div>
   </div>
 
-  <div class="section">
-    <h2>Skills</h2>
-    <ul>
-      <li><strong>CAD Modelling</strong> – SolidWorks, Shapr3D</li>
-      <li><strong>Adobe Suite</strong> – Photoshop, Illustrator, InDesign</li>
-      <li><strong>Rapid Prototyping</strong></li>
-      <li><strong>User-Centred Design</strong></li>
-      <li><strong>Production Coordination</strong></li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Contact Me</h2>
+  <div class="contact-section">
+    <h3>Contact Me</h3>
     <div class="contact-links">
       <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
         <i data-feather="mail"></i>
@@ -221,12 +248,16 @@
     </div>
   </div>
 
-  <footer>
-    &copy; 2025 Jack Simm – Portfolio
-  </footer>
+  <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
   <script>
-    // Slideshow
+    const toggle = document.querySelector(".left");
+    const menu = document.getElementById("dropdownMenu");
+
+    toggle.addEventListener("click", () => {
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    });
+
     const slides = document.querySelectorAll('.slide');
     let current = 0;
 
