--- a/gallery.html
+++ b/gallery.html
@@ -6,11 +6,18 @@
   <title>Gallery – Jack Simm</title>
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
+    :root {
+      --bg: #f9f9f9;
+      --text: #111;
+      --accent: #ddd;
+    }
+
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #1c1c1c;
-      color: #eee;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
     }
 
     /* Header */
@@ -18,62 +25,67 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
-      font-weight: 600;
-      font-size: 1.1rem;
+      padding: 24px 48px;
+      font-size: clamp(1rem, 2vw, 1.2rem);
+      background: #fff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
 
     .left {
+      font-weight: 600;
       cursor: pointer;
-      font-size: 1.2rem;
-      padding: 10px;
-      color: #eee;
     }
 
     .dropdown {
       position: absolute;
-      top: 60px;
-      left: 40px;
-      background: #2a2a2a;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 6px;
+      top: 70px;
+      left: 48px;
+      background: white;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      border-radius: 12px;
       display: none;
       flex-direction: column;
-      z-index: 10;
+      z-index: 1000;
+      overflow: hidden;
     }
 
     .dropdown a {
-      padding: 12px 20px;
+      padding: 16px 24px;
       text-decoration: none;
-      color: #eee;
+      color: var(--text);
       font-weight: 500;
+      transition: background 0.2s;
     }
 
     .dropdown a:hover {
-      background-color: #383838;
+      background-color: var(--accent);
     }
 
-    /* Gallery Grid */
+    /* Gallery Layout */
     .gallery-container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 24px;
-      padding: 40px 20px;
-      max-width: 1200px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 32px;
+      padding: 60px clamp(16px, 5vw, 60px);
+      max-width: 1600px;
       margin: 0 auto;
     }
 
     .gallery-container img {
       width: 100%;
       height: auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
-      transition: transform 0.3s ease;
+      border-radius: 16px;
+      box-shadow: 0 16px 40px rgba(0, 0, 0, 0.08);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
       cursor: zoom-in;
     }
 
     .gallery-container img:hover {
-      transform: scale(1.02);
+      transform: scale(1.015);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.12);
     }
 
     /* Lightbox */
@@ -83,25 +95,34 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: rgba(0, 0, 0, 0.85);
+      background-color: rgba(0, 0, 0, 0.95);
       display: none;
       justify-content: center;
       align-items: center;
-      z-index: 1000;
+      z-index: 9999;
     }
 
     .lightbox img {
-      max-width: 90%;
-      max-height: 90%;
+      max-width: 92%;
+      max-height: 92%;
       border-radius: 12px;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.4);
       cursor: zoom-out;
     }
 
     @media (max-width: 600px) {
       .gallery-container {
         grid-template-columns: 1fr;
-        gap: 16px;
-        padding: 20px 16px;
+        gap: 24px;
+        padding: 40px 16px;
+      }
+
+      header {
+        padding: 20px;
+      }
+
+      .dropdown {
+        left: 20px;
       }
     }
   </style>
@@ -120,13 +141,13 @@
   </header>
 
   <!-- Gallery Section -->
-  <div class="gallery-container">
+  <section class="gallery-container">
     <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser Render" loading="lazy" />
     <img src="untitled.31.jpg" alt="Untitled Design Render" loading="lazy" />
     <img src="untitled.34.jpg" alt="Yellow 3D Object" loading="lazy" />
     <img src="untitled.36.jpg" alt="Red Exploded Product Design" loading="lazy" />
     <img src="untitled.37.jpg" alt="Chrome and Orange Component Design" loading="lazy" />
-  </div>
+  </section>
 
   <!-- Lightbox -->
   <div id="lightbox" class="lightbox">
@@ -142,7 +163,7 @@
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
     });
 
-    // Lightbox functionality
+    // Lightbox
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
     const images = document.querySelectorAll('.gallery-container img');
@@ -150,7 +171,6 @@
     images.forEach(img => {
       img.addEventListener('click', () => {
         lightboxImg.src = img.src;
-        lightboxImg.alt = img.alt;
         lightbox.style.display = 'flex';
         document.body.style.overflow = 'hidden';
       });
@@ -159,7 +179,6 @@
     lightbox.addEventListener('click', () => {
       lightbox.style.display = 'none';
       lightboxImg.src = '';
-      lightboxImg.alt = '';
       document.body.style.overflow = '';
     });
 
@@ -167,13 +186,11 @@
       if (e.key === 'Escape') {
         lightbox.style.display = 'none';
         lightboxImg.src = '';
-        lightboxImg.alt = '';
         document.body.style.overflow = '';
       }
     });
 
     feather.replace();
   </script>
-
 </body>
 </html>
