--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jack Simm – Product Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
     /* Reset & base */
@@ -94,29 +94,28 @@
       position: absolute;
       bottom: 80px;
       left: 64px;
-      background: rgba(255 255 255 / 0.9);
-      padding: 40px 50px;
-      border-radius: 24px;
+      background: rgba(255 255 255 / 0.85);
+      padding: 48px 56px;
+      border-radius: 28px;
       display: flex;
       align-items: center;
-      gap: 32px;
+      gap: 40px;
       max-width: 720px;
-      box-shadow: 0 20px 40px rgb(0 0 0 / 0.1);
-      backdrop-filter: saturate(180%) blur(20px);
+      box-shadow: 0 30px 60px rgb(0 0 0 / 0.12);
+      backdrop-filter: saturate(180%) blur(18px);
       z-index: 10;
     }
 
     .profile-pic {
       flex-shrink: 0;
-      width: 140px;
-      height: 140px;
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(0%);
-      border: 3px solid #000;
-      box-shadow: 0 8px 16px rgb(0 0 0 / 0.12);
-      transition: transform 0.3s ease;
+      box-shadow: 0 10px 30px rgb(0 0 0 / 0.12);
       cursor: default;
+      transition: transform 0.3s ease;
     }
 
     .profile-pic:hover {
@@ -126,20 +125,25 @@
     .about-text {
       max-width: 480px;
       color: #1d1d1f;
+      text-shadow: 0 1px 2px rgb(255 255 255 / 0.8);
     }
 
     .about-text h2 {
-      font-weight: 700;
-      font-size: 2.5rem;
-      margin: 0 0 14px 0;
+      font-weight: 300;
+      font-size: 3.2rem;
+      margin: 0 0 12px 0;
       line-height: 1.1;
+      letter-spacing: -0.02em;
+      color: #111;
     }
 
     .about-text p {
-      font-size: 1.125rem;
-      line-height: 1.5;
+      font-weight: 300;
+      font-size: 1.3rem;
+      line-height: 1.6;
       color: #3c3c43;
       margin: 0;
+      letter-spacing: 0.01em;
     }
 
     /* Contact Section */
@@ -194,22 +198,22 @@
         left: 50%;
         transform: translateX(-50%);
         max-width: 90vw;
-        padding: 32px 28px;
-        gap: 24px;
+        padding: 36px 32px;
+        gap: 28px;
       }
 
       .profile-pic {
-        width: 120px;
-        height: 120px;
+        width: 140px;
+        height: 140px;
       }
 
       .about-text h2 {
-        font-size: 1.9rem;
+        font-size: 2.2rem;
         text-align: center;
       }
 
       .about-text p {
-        font-size: 1rem;
+        font-size: 1.1rem;
         text-align: center;
       }
     }
